# crow_barcode

./: CMakeLists.txt  README.md  demo.cpp  main.cpp  requirements
cmake/: FindZBar.cmake
